// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should add, move, and remove in arrays 1`] = `
Array [
  Object {
    "from": 2,
    "path": Array [],
    "to": 1,
    "type": "Move",
  },
  Object {
    "item": 3,
    "path": Array [
      2,
    ],
    "type": "Add",
  },
  Object {
    "path": Array [
      3,
    ],
    "type": "Remove",
  },
]
`;

exports[`it should attempt to find moved array items 1`] = `
Array [
  Object {
    "after": 4,
    "before": 1,
    "path": Array [
      0,
      "value",
    ],
    "type": "Edit",
  },
  Object {
    "from": 2,
    "path": Array [],
    "to": 1,
    "type": "Move",
  },
  Object {
    "item": Object {
      "value": 5,
    },
    "path": Array [
      3,
    ],
    "type": "Add",
  },
]
`;

exports[`it should diff objects 1`] = `
Array [
  Object {
    "after": 2,
    "before": 1,
    "path": Array [
      "a",
    ],
    "type": "Edit",
  },
  Object {
    "after": 3.141,
    "before": 3.14,
    "path": Array [
      "b",
    ],
    "type": "Edit",
  },
  Object {
    "after": "dd",
    "before": "d",
    "path": Array [
      "c",
    ],
    "type": "Edit",
  },
  Object {
    "after": false,
    "before": true,
    "path": Array [
      "e",
    ],
    "type": "Edit",
  },
  Object {
    "item": 4,
    "path": Array [
      "f",
      3,
    ],
    "type": "Add",
  },
  Object {
    "item": "k",
    "path": Array [
      "g",
      "j",
    ],
    "type": "Add",
  },
]
`;

exports[`it should find object rename 1`] = `
Array [
  Object {
    "path": Array [
      "a",
    ],
    "to": "b",
    "type": "Rename",
  },
]
`;
